# friteup-graphql-api

./: LICENSE  Procfile  README.md  pyproject.toml  requirements.txt
friteup/: application.py  db.py
friteup/db/: mongodb.py  mongodb_utils.py
friteup/middlewares/: authentication.py
friteup/models/: comment.py  post.py  token.py  user.py
friteup/models/Post/: PostBase.py  PostResponse.py  PostResponseWithUser.py  PostUpdates.py
friteup/models/User/: UserBase.py  UserInDB.py  UserResponse.py  UserUpdates.py
friteup/resolvers/: comment.py  post.py  user.py
friteup/schemas/: schema.py
friteup/utils/: MyErrors.py  token_db.py
friteup/utils/model_utils/: post.py  user.py
tests/: test_friteup.py
