[tool.poetry]
name = "friteup"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.47.1"
ariadne = "^0.9.0"
motor = "^2.1.0"
pydantic = "^1.3"
werkzeug = "^0.16.0"
uvicorn = "^0.11.7"
pyjwt = "^1.7.1"
dnspython = "^1.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
pycodestyle = "^2.5.0"
autopep8 = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
